--- a/app/src/main/res/layout/activity_contract_details.xml
+++ b/app/src/main/res/layout/activity_contract_details.xml
@@ -222,6 +222,7 @@
                         />
 
                     <ImageView
+                        android:id="@+id/incidentals_add"
                         android:layout_marginRight="@dimen/dp_30"
                         android:layout_width="@dimen/dp_22"
                         android:layout_height="@dimen/dp_22"
