--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="text_home_item_cut">#efefef</color>
     <color name="text_color">#333333</color>
     <color name="text_colors">#666666</color>
-
+    <color name="backgroud">#f9f8f8</color>
 
     <color name="ccffffff">#CCFFFFFF</color>
     <color name="ff444444">#ff444444</color>
