--- a/app/src/main/res/layout/singgle_activity_layout.xml
+++ b/app/src/main/res/layout/singgle_activity_layout.xml
@@ -18,7 +18,8 @@
     android:layout_width="100dp"
     android:layout_height="30dp"
     android:background="@color/bk_green"
-
+    android:textColor="@color/white"
+    
     />
     </LinearLayout>
 </LinearLayout>
