--- a/app/src/main/res/layout/activity_common_area.xml
+++ b/app/src/main/res/layout/activity_common_area.xml
@@ -20,6 +20,7 @@
             >
 
             <LinearLayout
+                android:id="@+id/ll_city"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_10"
