城市列表点击事件

--- a/app/src/main/res/layout/add_house_activity.xml
+++ b/app/src/main/res/layout/add_house_activity.xml
@@ -32,6 +32,7 @@
                 >
 
                 <TextView
+                    android:id="@+id/commonArea_city_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="选择城市"
