--- a/app/src/main/res/layout/common_title.xml
+++ b/app/src/main/res/layout/common_title.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal"
     android:background="@color/colorPrimary"
     android:gravity="center"
+    android:id="@+id/ll_title"
     >
 
     <ImageView
