--- a/app/src/main/res/layout/activity_common_facility.xml
+++ b/app/src/main/res/layout/activity_common_facility.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
@@ -13,6 +14,7 @@
         android:layout_above="@+id/tv_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        tools:ignore="UnknownId"
         >
         <LinearLayout
 
@@ -48,10 +50,13 @@
                 >
 
                 <EditText
+                    android:id="@+id/common_room"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/huxing_backgrund"
                     android:padding="@dimen/dp_5"
+                    android:maxLength="1"
+                    android:maxLines="1"
                     />
 
                 <TextView
@@ -68,18 +73,22 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/huxing_backgrund"
                     android:padding="@dimen/dp_5"
+                    android:maxLength="1"
+                    android:maxLines="1"
                     />
 
                 <TextView
+                    android:id="@+id/comnon_hall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="@dimen/dp_10"
-                    android:text="室"
+                    android:text="厅"
                     android:textSize="@dimen/sp_12"
                     />
 
                 <EditText
+                    android:id="@+id/common_wc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/huxing_backgrund"
@@ -91,8 +100,10 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="@dimen/dp_10"
-                    android:text="室"
+                    android:text="卫"
                     android:textSize="@dimen/sp_12"
+                    android:maxLength="1"
+                    android:maxLines="1"
                     />
             </LinearLayout>
 
