--- a/app/src/main/res/layout/add_house_activity.xml
+++ b/app/src/main/res/layout/add_house_activity.xml
@@ -169,6 +169,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/add_house_floor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_10"
@@ -192,7 +193,15 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     />
-
+                <TextView
+                    android:id="@+id/add_house_tvfloor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3/5"
+                    android:layout_marginRight="@dimen/dp_5"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/sp_15"
+                    />
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
