--- a/app/src/main/res/layout/item_publish.xml
+++ b/app/src/main/res/layout/item_publish.xml
@@ -7,9 +7,11 @@
     <ImageView
         android:layout_gravity="center"
         android:id="@+id/item_grid_image"
-        android:layout_width="68dp"
-        android:layout_height="68dp"
-        android:scaleType="centerCrop"
+        android:horizontalSpacing="5dp"
+        android:verticalSpacing="2dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="center"
         android:src="@mipmap/ic_launcher_round" >
     </ImageView>
 </LinearLayout>
